# 3-building-bitcoin-with-rust-edilmedeiros

./: Cargo.toml
src/: linked_list.rs  mresult.rs
