[package]
name = "a-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ripemd = "0.1.3"
secp256k1 = "0.29.0"
hex = "0.4.3"
base16ct = "0.2.0"
